--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -101,23 +101,10 @@ vec3 onRepX( vec3 p, float interval ) {
 	return p;
 }
 
-vec3 rotate(vec3 p, float angle, vec3 axis){
-    vec3 a = normalize(axis);
-    float s = sin(angle);
-    float c = cos(angle);
-    float r = 1.0 - c;
-    mat3 m = mat3(
-        a.x * a.x * r + c,
-        a.y * a.x * r + a.z * s,
-        a.z * a.x * r - a.y * s,
-        a.x * a.y * r - a.z * s,
-        a.y * a.y * r + c,
-        a.z * a.y * r + a.x * s,
-        a.x * a.z * r + a.y * s,
-        a.y * a.z * r - a.x * s,
-        a.z * a.z * r + c
-    );
-    return m * p;
+mat2 rotate(in float a)
+{
+    float s=sin(a),c=cos(a);
+    return mat2(c,s,-s,c);
 }
 
 float sphereDist( vec3 p, vec3 c, float r ) {
@@ -227,18 +214,24 @@ float psylliumDist( vec3 p ) {
 }
 
 float laserDist( vec3 p ) {
+	vec3 q = p;
+	q.xy *= rotate( -1.0 );
+
 	return min(
-		sdCapsule( onRepX( rotate(p, -1.0, vec3(0.0, 0.0, 1.0)), 40.0), vec3( 22.0 * sin( time * 2.0 ), -1000.0, 1000.0 ), vec3( 0.0, 10000.0, -10000.0), 0.2 ),
+		sdCapsule( onRepX( q, 40.0), vec3( 22.0 * sin( time * 2.0 ), -1000.0, 1000.0 ), vec3( 0.0, 10000.0, -10000.0), 0.2 ),
 		sdCapsule( onRepX( p, 30.0) , vec3( 17.0 * cos( time * 2.0 ), -1000.0, 1000.0 ), vec3( 0.0, 10000.0, -10000.0), 0.2 ));
 }
 
 float sceneDist( vec3 p ) {
+	vec3 q = p;
+	q.xz *= rotate( -2.0 );
+
 	return min( 
 		max(
 			sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 10.0 ),
 			udRoundBox( p + vec3( 0.0, 20.0, 0.0 ), vec3( 20.0, 20.0, 20.0 ), 0.1 )
 		),
-		sphereDist( onRep( p, 500.0), vec3( 0.0, 100.0, 0.0 ), 100.0 )
+		sphereDist( onRep( q, 500.0), vec3( -150.0, 100.0, -150.0 ), 100.0 )
 	);
 }
 
@@ -246,13 +239,16 @@ Intersect sceneIntersect( vec3 p ) {
 
 	Intersect a, b, c;
 
+	vec3 q = p;
+	q.xz *= rotate( -2.0 );
+
 	a.distance = sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 10.0 );
 	a.material = MIRROR_MATERIAL;
 
 	b.distance = udRoundBox( p + vec3( 0.0, 20.0, 0.0 ), vec3( 20.0, 20.0, 20.0 ), 0.1 );
 	b.material = FLOOR_MATERIAL;
 
-	c.distance = sphereDist( onRep( p, 500.0), vec3( 0.0, 100.0, 0.0 ), 100.0 );
+	c.distance = sphereDist( onRep( q, 500.0), vec3( -150.0, 100.0, -150.0 ), 100.0 );
 	c.material = MIRROR_MATERIAL;
 
 	return minIntersect( maxIntersect( a, b ), c );
@@ -390,7 +386,7 @@ void main(void) {
 		nearest = getRayColor( cPos, ray );
 
 		color += alpha * nearest.color;
-		alpha *= 1.0;
+		alpha *= 0.8;
 		ray = normalize( reflect( ray, nearest.normal ) );
 		cPos = nearest.position + nearest.normal * OFFSET;
 
