--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -65,7 +65,8 @@ uniform float cameraFar;
 // consts
 const float EPS = 0.0001;
 const float OFFSET = EPS * 2000.0;
-const float PI = 3.14159;
+const float PI  = 3.14159265359;
+const float PI2 = 6.28318530718;
 const float GRID = 12.0;
 
 
@@ -87,6 +88,8 @@ struct Intersect {
 const int MIRROR_MATERIAL = 0;
 const int FLOOR_MATERIAL = 1;
 const int CIRCUIT_MATERIAL = 2;
+const int BASIC_MATERIAL = 3;
+const int CIRCUIT_MATERIAL2 = 4;
 
 // distance functions
 vec3 onRep( vec3 p, float interval ) {
@@ -124,13 +127,13 @@ vec2 bend(in vec2 p, in float d)
 	return p;
 }
 
-float opCheapBend( vec3 p )
+vec3 opCheapBend( vec3 p )
 {
     float c = cos(20.0*p.y);
     float s = sin(20.0*p.y);
     mat2  m = mat2(c,-s,s,c);
     vec3  q = vec3(m*p.xy,p.z);
-    return primitive(q);
+	return q;
 }
 
 float sphereDist( vec3 p, vec3 c, float r ) {
@@ -139,15 +142,20 @@ float sphereDist( vec3 p, vec3 c, float r ) {
 
 }
 
+float udRoundBox( vec3 p, vec3 b, float r )
+{
+  return length(max(abs(p)-b,0.0))-r;
+}
+
+float udBox( vec3 p, vec3 b )
+{
+  return length(max(abs(p)-b,0.0));
+}
+
 float floorDist( vec3 p ){
 
 	return dot(p, vec3( 0.0, 1.0, 0.0 ) ) + 0.0;
 
-}
-
-float udRoundBox( vec3 p, vec3 b, float r )
-{
-  return length(max(abs(p)-b,0.0))-r;
 }
 
 float sdCapsule( vec3 p, vec3 a, vec3 b, float r )
@@ -292,23 +300,40 @@ float sceneDist( vec3 p ) {
 	vec3 q = p;
 	q.xz *= rotate( -2.0 );
 
-	return min( 
-		max(
-			sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 10.0 ),
-			udRoundBox( p + vec3( 0.0, 20.0, 0.0 ), vec3( 20.0, 20.0, 20.0 ), 0.1 )
-		),
-		sphereDist( onRep( q, 500.0), vec3( -150.0, 100.0, -150.0 ), 100.0 )
-	);
+	vec3 p2 = p;
+	p2.xz = fold( p2.xz, 8.0 );
+	p2.z -= 20.0;
+	p2.yz *= rotate( -0.5 );
+
+	return 
+		min(
+			min(
+				max(
+					sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 15.0 ),
+					udRoundBox( p + vec3( 0.0, 20.0, 0.0 ), vec3( 20.0, 20.0, 20.0 ), 0.1 )
+				),
+				max(
+					sphereDist( p, vec3( 0.0, 10.0, 0.0 ), 24.0 ),
+					udRoundBox( p2, vec3( 1.0, 5.0, 10.0 ), 0.1 )
+				)
+			),
+			sphereDist( onRep( q, 500.0), vec3( -150.0, 100.0, -150.0 ), 100.0 )
+		);
 }
 
 Intersect sceneIntersect( vec3 p ) {
 
-	Intersect a, b, c;
+	Intersect a, b, c, d;
 
 	vec3 q = p;
 	q.xz *= rotate( -2.0 );
 
-	a.distance = sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 10.0 );
+	vec3 p2 = p;
+	p2.xz = fold( p2.xz, 8.0 );
+	p2.z -= 20.0;
+	p2.yz *= rotate( -0.5 );
+
+	a.distance = sphereDist( p, vec3( 0.0, 0.0, 0.0 ), 15.0 );
 	a.material = MIRROR_MATERIAL;
 
 	b.distance = udRoundBox( p + vec3( 0.0, 20.0, 0.0 ), vec3( 20.0, 20.0, 20.0 ), 0.1 );
@@ -317,7 +342,13 @@ Intersect sceneIntersect( vec3 p ) {
 	c.distance = sphereDist( onRep( q, 500.0), vec3( -150.0, 100.0, -150.0 ), 100.0 );
 	c.material = CIRCUIT_MATERIAL;
 
-	return minIntersect( maxIntersect( a, b ), c );
+	d.distance = max(
+					sphereDist( p, vec3( 0.0, 10.0, 0.0 ), 24.0 ),
+					udRoundBox( p2, vec3( 1.0, 5.0, 10.0 ), 0.1 )
+				);
+	d.material = CIRCUIT_MATERIAL2;
+
+	return minIntersect( minIntersect( maxIntersect( a, b ), d ), c);
 }
 
 vec3 getNormal( vec3 p ) {
@@ -365,6 +396,12 @@ Intersect getRayColor( vec3 origin, vec3 ray ) {
 		} else if ( nearest.material == MIRROR_MATERIAL ) {
 			vec3 color = vec3( 0.2 );
 			nearest.color = color * diffuse + specular * 0.3;
+		} else if ( nearest.material == CIRCUIT_MATERIAL2 ) {
+			vec2 uv = p.yz / 100.0;
+			uv.xy += time * 0.1;
+			vec2 dg = circuitPattern(uv);
+			float pattern = max( dg.x - 1.0, 0.0 );
+			nearest.color = (vec3(1.0) - psylliumColor) * pattern;
 		}
 		nearest.isHit = true;
 	} else {
