--- a/raymarching_hybrid.html
+++ b/raymarching_hybrid.html
@@ -412,10 +412,12 @@ void main(void) {
 
 			var config = {
 				saveImage: function() {
-
 					renderer.render( scene, camera );
-					window.open( canvas.toDataURL() );
+					if ( mesh ) {
+						helper.render( scene, camera );
+					}
 
+					window.open( canvas.toDataURL() );
 				},
 				camera: 'Orbit',
 
